# flash_attention_cuda

./: .gitignore  CMakeLists.txt
benchmarks/: results.md
include/: attention.h  benchmark.cuh  cuda_utils.cuh
python/: benchmark_compare.py  validate.py
src/: main.cu
src/kernels/: attention_flash1.cu  attention_fused_softmax.cu  attention_naive.cu
